# diameter-protocol

./: Cargo.toml  LICENSE  README.md
example/: client.rs
src/: errors.rs  lib.rs
src/modeling/: avp.rs  command_codes.rs  diameter.rs  frame.rs  mod.rs
src/modeling/avp/: address.rs  avp.rs  data.rs  enumerated.rs  float32.rs  float64.rs  group.rs  integer32.rs  integer64.rs  ipv4.rs  ipv6.rs  macros.rs  mod.rs  numbers.rs  octet_string.rs  time.rs  unsigned32.rs  unsigned64.rs  utf8_string.rs
src/modeling/message/: application_id.rs  command_code.rs  command_flags.rs  dictionary.rs  mod.rs
src/transport/: client.rs  errors.rs
