[package]
name = "diameter-protocol"
version = "0.1.0"
edition = "2024"
authors = ["Ahmed Mehanna"]
description = "Rust Implementation of the Diameter Protocol."
license = "Apache-2.0 MIT"
keywords = [
    "diameter",
    "network",
    "diameter-stack",
    "gx-interface",
    "diameter-interface"
]
repository = "https://github.com/AhmedMehanna1/diameter-protocol"

[[example]]
name = "diameter-client"
path = "example/client.rs"

[dependencies]
chrono = "0.4"
serde = { version = "1.0.219", features = ["derive"] }
serde-xml-rs = "0.6.0"
lazy_static = "1.5.0"